set task touch action to none to prevent scrollingon mobile

--- a/src/Components/Task/Task.css
+++ b/src/Components/Task/Task.css
@@ -7,6 +7,8 @@
     gap: 10px;
     justify-content: center;
     align-items: flex-start;
+    position: relative;
+    touch-action: none;
 }
 .task-header {
     display: flex;
